<resources>
    <string name="app_name">VocabNote</string>
    <string name="nav_studying">Studying</string>
    <string name="nav_all_vocab">All Vocab</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_cloud">Cloud Sync</string>
    <string name="search_hints">Search...</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_word">Add New Word</string>
    <string name="statistics_title">Number of Words</string>
    <string name="total">Total: </string>
    <string name="noOfStudying">Studying: </string>
    <string name="noOfStudied">Studied: </string>
    <string name="ctx_Add">Add To Study List</string>
    <string name="ctx_Delete">Delete</string>
    <string name="ctx_Edit">Edit</string>
    <string name="save">Save</string>
    <string name="learning_chart">Learning Progress Chart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>