<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsFragment">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:elevation="6dp"
                app:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/firstCardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="none"
                        android:text="@string/statistics_title"
                        android:textColor="@color/primary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/totalWordsLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/total"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/totalWordsValue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/firstCardTitle" />

                    <TextView
                        android:id="@+id/totalWordsValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="123456"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/totalWordsLabel"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/totalWordsLabel"
                        app:layout_constraintTop_toTopOf="@+id/totalWordsLabel" />

                    <TextView
                        android:id="@+id/studyingLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/noOfStudying"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/studyingValue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/totalWordsLabel" />

                    <TextView
                        android:id="@+id/studyingValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="123456"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/studyingLabel"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/studyingLabel"
                        app:layout_constraintTop_toTopOf="@+id/studyingLabel" />

                    <TextView
                        android:id="@+id/noOfStudiedLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/noOfStudied"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/studiedValue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/studyingLabel" />

                    <TextView
                        android:id="@+id/studiedValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="123456"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/noOfStudiedLabel"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/noOfStudiedLabel"
                        app:layout_constraintTop_toTopOf="@+id/noOfStudiedLabel" />

                    <org.eazegraph.lib.charts.PieChart
                        android:id="@+id/piechart"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:padding="6dp"

                        app:egLegendColor="@color/primary"
                        app:egLegendHeight="20dp"
                        app:egLegendTextSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/noOfStudiedLabel">

                    </org.eazegraph.lib.charts.PieChart>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:elevation="6dp"
                app:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/secondCardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="none"
                        android:text="@string/learning_chart"
                        android:textColor="@color/primary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/secondCardSubtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        android:text="Number of words has been studied in 6 last months"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/secondCardTitle" />

                    <org.eazegraph.lib.charts.BarChart
                        android:id="@+id/barchart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="6dp"
                        app:egBarWidth="30dp"
                        app:egFixedBarWidth="true"
                        app:egLegendHeight="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/secondCardSubtitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

</ScrollView>